# ROS-simulator

./: README.md
afish/: CMakeLists.txt  package.xml
afish/data/control/: control_config.bash  control_standard.xml
afish/data/control/params/: controllers_standard.yaml~
afish/data/dynamics/: afish.yaml
afish/data/locations/: biograd_esc.yaml  swarm_loc.yaml  swarm_loc.yaml~  swarm_loc5.yaml
afish/data/simulation/: simulation_standard.xml  vehicle.xml  visualization_standard.xml
afish/data/simulation/scenario/: simulation_docking_scenario.xml
afish/src/: action_library.py  controller_for_trust_scenario.py
afish/src/tests/: API_test.py
amussel/: CMakeLists.txt  package.xml
amussel/data/control/: control_standard.xml
amussel/data/control/params/: controllers_standard.yaml
amussel/data/devices/: arduino_driver.xml  device_config.bash
amussel/data/dynamics/: amussel.yaml
amussel/data/locations/: bi_pools.yaml  swarm_loc4.yaml
amussel/data/simulation/: simulation_config.bash~  simulation_standard.xml  vehicle.xml
amussel/launch/simulation/: amussel_standard_simulation.launch  amussel_standard_simulation_raw.launch
amussel/src/: action_library.py  controller_for_docking_scenario.py  controller_for_docking_scenario_optimization.py  controller_for_scenario_one.py  controller_for_trust_scenario.py  raw_controller.py
amussel/src/tests/: API_test.py
apad/: CMakeLists.txt  package.xml
apad/action/: aPad.action
apad/data/control/: control_standard.xml  controltest.bash  controltest.bash~
apad/data/control/params/: controllers_standard.yaml  controllers_standard.yaml~
apad/data/devices/: 99-pladypos-devices.rules  navquest.xml  novatel.xml  pladypos_eth.xml  relay_module.xml  spatial.xml  ublox.xml
apad/data/dynamics/: apad.yaml  apad.yaml~  apad1.yaml~  pladypos_sonar_video.yaml~
apad/data/locations/: swarm_loc2.yaml  swarm_loc3.yaml
apad/data/navigation/: navigation_config.bash  navigation_standard.xml
apad/data/navigation/params/: nav_standard.yaml
apad/data/simulation/: simulation_standard.xml  vehicle.xml
apad/devices/: static_frames.xml
apad/launch/simulation/: apad_standard_simulation_raw.launch
apad/src/: action_client.py  action_server.py  controller_for_docking_scenario.py  controller_for_docking_scenario_optimization.py  controller_for_scenario_one.py  raw_controller.py
apad/src/tests/: API_test.py
api/: CMakeLists.txt  package.xml  setup.py
api/src/api_lib/: acoustic_modem.py  anchoring.py  battery.py  clock.py  docking.py  gps.py  induction.py  wifi.py
controllers/: .gitignore
controllers/template/: CMakeLists.txt  package.xml
doc/source/: conf.py  index.rst
labust-common-msgs/: LICENSE  README.md
labust-common-msgs/auv_msgs/: CMakeLists.txt
labust-common-msgs/misc_msgs/: CMakeLists.txt  package.xml
labust-common-msgs/misc_msgs/msg/: ConnMatrix.msg  CourseKeepingFA.msg  CourseKeepingUA.msg  DataEventsContainer.msg  DynamicPositioning.msg  EventData.msg  ExternalEvent.msg  Go2PointFA.msg  Go2PointUA.msg  ISO.msg  MissionSetup.msg  RhodamineAdc.msg  RhodamineData.msg  SendPrimitive.msg  StartNeptusParser.msg  StartParser.msg  zeta.msg
labust-common-msgs/misc_msgs/srv/: ChangeDockingStatus.srv  EvaluateExpression.srv  GetChargeInfo.srv  GetDockingInfo.srv  GetPosition.srv  GetSensoryReading.srv  GetTrustInfo.srv  RelayControl.srv  RosbagControl.srv  SendEnergy.srv
labust-common-msgs/navcon_msgs/: CMakeLists.txt  package.xml
labust-common-msgs/underwater_msgs/: CMakeLists.txt  package.xml
labust-common-msgs/underwater_msgs/msg/: MediumTransmission.msg  ModemTransmission.msg  USBLFix.msg
labust-common-msgs/underwater_msgs/srv/: AcSimRegister.srv
labust_control/: CMakeLists.txt  package.xml
labust_control/include/labust/control/: HLControl.hpp  IPFFController.h  ManControl.hpp  PIDBase.h  PIFFController.h  PSatDController.h  VelocityControl.hpp  WindupPolicy.hpp  manual_control.h
labust_control/include/labust/control/esc/: EscBounded.hpp  EscBoundedBase.hpp  EscClassic.hpp  EscEKF.hpp  EscEKFModel.hpp  EscPerturbationBase.hpp
labust_control/src/: ALTControl.cpp  DepthControl.cpp  FADPControl.cpp  FADP_3DControl.cpp  HDGControl.cpp  PitchControl.cpp  RefManual.cpp  VelocityControl.cpp  diver_track.py
labust_control/src/esc/: ESCControlClassic_UV.cpp  ESControlBounded_UV.cpp  ESControlEKF_MODEL_UV.cpp  ESControlEKF_UV.cpp
labust_control/src/esctoolkit/: esc_bounded.cpp  esc_classic.cpp  esc_ekf_grad.cpp  esc_ekf_grad_model.cpp
labust_control/src/line_following/: UALFControl.cpp
labust_control/src/manual_control/: manual_control.cpp
labust_control/src/pidtoolkit/: IPFFController.c  PIDBase.c  PIFFController.c  PSatDController.c
labust_control/src/virtual_target/: uvt_control.cpp
labust_sim/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
labust_sim/src/data_sim/: USBLSim.cpp  (+2 more)
snippets/: CMakeLists.txt  package.xml  setup.py
snippets/data/locations/: estonia_valgjarv.yaml  sdot_yam.yaml  split_hrm.yaml
snippets/data/models/: girona500.yaml  pladypos.yaml
snippets/include/labust/comms/: ascii_serial.h
snippets/include/labust/math/: NumberManipulation.hpp
snippets/include/labust/preprocessor/: clean_serializator.hpp
snippets/include/labust/simulation/: matrixfwd.hpp
snippets/include/labust/tools/: GeoUtilities.hpp  OutlierRejection.hpp  RosbagUtilities.hpp  StringUtilities.hpp  conversions.hpp  latlon_encoder.h  packer.h
snippets/include/labust/vehicles/: ThrustAllocation.hpp
snippets/src/snippets/clock_server/: clock_server.py  simulation_clock2.cpp  simulation_clock2.cpp~
snippets/src/snippets/generators/: make_structs.py
snippets/src/snippets/generators/cppgen/: cppgen.py  enum.py  function.py  struct_serializer.py  structure.py  variable.py
snippets/src/snippets/generators/elements/: enum.py  function.py  structure.py  variable.py
snippets/src/snippets/generators/javagen/: javagen.py
subcultron_launch/: CMakeLists.txt  package.xml
subcultron_launch/src/: setup.py  setup_simple.py  uwsim_location_holder.py  uwsim_location_holder_generator.py
(+54 files in other folders)
