<?xml version="1.0"?>
<package>
  <name>misc_msgs</name>
  <version>0.1.0</version>
  <description>
      The misc_msgs package contains topic messages, server messages and action
      definitions used for miscellaneous applications of LABUST. 
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/navcon_msgs</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>auv_msgs</run_depend>
</package>
