<?xml version="1.0"?>
<package>
  <name>underwater_msgs</name>
  <version>0.1.0</version>
  <description>
      The messages for underwater sensors.
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/underwater_msgs</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
</package>